--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.1'
 
 services:
   db:
@@ -13,4 +13,34 @@ services:
     ports:
       - 3307:3306
     volumes:
-      - ../SynsDatabaseDrive/db-english:/var/lib/mysql
+      - db:/var/lib/mysql
+
+  app:
+    build:
+      context: ./docker/php-fpm
+      args:
+        UID: ${UID}
+        GID: ${GID}
+    volumes:
+      - ./:/var/www/html
+      - ./docker/php-fpm/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    working_dir: /var/www/html
+    user: ${UID}:${GID}
+
+  webserver:
+    image: nginx
+    working_dir: /application
+    depends_on:
+      - app
+    links:
+      - app
+    volumes:
+      - ./public:/var/www/html/public
+      - ./storage/logs/nginx/:/var/log/nginx
+      - ./docker/nginx_conf/default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - '8080:80'
+      - '443:443'
+
+volumes:
+  db:
